--- a/teachers.html
+++ b/teachers.html
@@ -56,36 +56,44 @@
                     <img src="img/teachers/teacher-img.png">
                     <img src="img/teachers/talk-cover.png" class="talk-cover">
                 </div>
-                <p class="teacher-name">陈好老师</p>
-                <div class="mui-divider"></div>
-                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+                <div class="txt-box">
+                    <p class="teacher-name">陈好老师</p>
+                    <div class="mui-divider"></div>
+                    <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+                </div>
             </div>
             <div class="teacher-card">
                 <div class="photo-box">
                     <img src="img/teachers/teacher-img.png">
                     <img src="img/teachers/talk-cover.png" class="talk-cover">
                 </div>
-                <p class="teacher-name">陈好老师</p>
-                <div class="mui-divider"></div>
-                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+                <div class="txt-box">
+                    <p class="teacher-name">陈好老师</p>
+                    <div class="mui-divider"></div>
+                    <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+                </div>
             </div>
             <div class="teacher-card">
                 <div class="photo-box">
                     <img src="img/teachers/teacher-img.png">
                     <img src="img/teachers/talk-cover.png" class="talk-cover">
                 </div>
-                <p class="teacher-name">陈好老师</p>
-                <div class="mui-divider"></div>
-                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+                <div class="txt-box">
+                    <p class="teacher-name">陈好老师</p>
+                    <div class="mui-divider"></div>
+                    <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+                </div>
             </div>
             <div class="teacher-card">
                 <div class="photo-box">
                     <img src="img/teachers/teacher-img.png">
                     <img src="img/teachers/talk-cover.png" class="talk-cover">
                 </div>
-                <p class="teacher-name">陈好老师</p>
-                <div class="mui-divider"></div>
-                <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+                <div class="txt-box">
+                    <p class="teacher-name">陈好老师</p>
+                    <div class="mui-divider"></div>
+                    <p class="teacher-info">老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介老师简介</p>
+                </div>
             </div>
             <div class="teacher-card">
                 <div class="photo-box">
