--- a/closed-courses.html
+++ b/closed-courses.html
@@ -43,9 +43,10 @@
     <!--part1-->
     <section class="cc-part cc-part-1">
         <div class="section-container">
+            <img src="img/closed-courses/cake.png" class="cake-img">
             <ul>
                 <li>
-                    <i class="cc-icon-clock" style="margin: 30px 20px;
+                    <i class="cc-icon-clock"
 "></i>
                     <p>2015年<span class="yellow">12月5日</span>报道，6-17日上课，18日离开。
                         其中前期有预习工作，后期有20小时封闭班专属的网络加强补丁课。</p>
@@ -62,7 +63,6 @@
                     <a class="toreg-btn">点击报名</a>
                 </li>
             </ul>
-            <img src="img/closed-courses/cake.png" class="cake-img">
         </div>
     </section>
 
@@ -384,7 +384,7 @@
         <div class="class-view">
             <p>课堂情况和笔记一览</p>
         </div>
-        <a href="#">
+        <a href="reg-sign.html">
             <div class="gosign-block">点击报名</div>
         </a>
 
@@ -404,7 +404,7 @@
             <a><li class="mui--divider-right">网络课程</li></a>
             <a><li class="mui--divider-right">封闭课程</li></a>
             <a><li class="mui--divider-right">教学体系</li></a>
-            <a><li class="mui--divider-right">名师</li></a>
+            <a><li>名师</li></a>
         </ul>
     </div>
 </div>
