--- a/reg-pay.html
+++ b/reg-pay.html
@@ -35,7 +35,9 @@
 <link href="style/register.css" rel="stylesheet">
 <!-- 页面内容 -->
 <div class="wrap">
-    <div class="reg-banner"></div>
+    <div class="reg-banner">
+        <img src="img/register/reg-banner-logo.png">
+    </div>
     <div class="reg-box">
         <ul class="reg-step-bar">
             <li>1 填写报名信息</li>
