--- a/reg-success.html
+++ b/reg-success.html
@@ -35,14 +35,16 @@
 <link href="style/register.css" rel="stylesheet">
 <!-- 页面内容 -->
 <div class="wrap">
-    <div class="reg-banner"></div>
+    <div class="reg-banner">
+        <img src="img/register/reg-banner-logo.png">
+    </div>
     <div class="reg-box">
         <ul class="reg-step-bar">
             <li>1 填写报名信息</li>
             <li>2 报名须知</li>
             <li  style="background: #e58538;color: #fff;">3 报名成功</li>
         </ul>
-        <img src="img/register/face-success.png" class="reg-face" style="margin: 120px 0 40px 0">
+        <img src="img/register/face-success.png" class="reg-face">
         <p class="reg-txt">报名成功！</p>
     </div>
 </div>
