--- a/closed-courses.html
+++ b/closed-courses.html
@@ -46,8 +46,7 @@
             <img src="img/closed-courses/cake.png" class="cake-img">
             <ul>
                 <li>
-                    <i class="cc-icon-clock"
-"></i>
+                    <i class="cc-icon-clock"></i>
                     <p>2015年<span class="yellow">12月5日</span>报道，6-17日上课，18日离开。
                         其中前期有预习工作，后期有20小时封闭班专属的网络加强补丁课。</p>
                 </li>
@@ -105,34 +104,29 @@
                 <li>
                     <img src="img/closed-courses/reason-1.png">
                     <p>强大的教学教研团队，全面提高的教学体系</p>
-                    <a href="#">在线报名</a>
                 </li>
                 <li>
                     <img src="img/closed-courses/reason-2.png">
                     <p>玲琅满目的复习资料让你无法判断什么是正确的学习方法。</p>
-                    <a href="#">在线报名</a>
                 </li>
                 <li>
                     <img src="img/closed-courses/reason-3.png">
                     <p>强大的教学教研团队，全面提高的教学体系</p>
-                    <a href="#">在线报名</a>
                 </li>
                 <li>
                     <img src="img/closed-courses/reason-4.png">
                     <p>强大的教学教研团队，全面提高的教学体系</p>
-                    <a href="#">在线报名</a>
                 </li>
                 <li>
                     <img src="img/closed-courses/reason-5.png">
                     <p>强大的教学教研团队，全面提高的教学体系</p>
-                    <a href="#">在线报名</a>
                 </li>
                 <li>
                     <img src="img/closed-courses/reason-6.png">
                     <p>强大的教学教研团队，全面提高的教学体系</p>
-                    <a href="#">在线报名</a>
                 </li>
             </ul>
+            <a href="#" class="online-reg">在线报名</a>
         </div>
     </section>
 
@@ -381,12 +375,13 @@
 
     <!--part9-->
     <section class="cc-part cc-part-9">
-        <div class="class-view">
-            <p>课堂情况和笔记一览</p>
-        </div>
         <a href="reg-sign.html">
             <div class="gosign-block">点击报名</div>
         </a>
+        <div class="class-view">
+            <p>课堂情况和笔记一览</p>
+        </div>
+
 
     </section>
 </div>
