--- a/online-courses.html
+++ b/online-courses.html
@@ -39,10 +39,10 @@
     </div>
     <div class="oc-part oc-part1">
         <div class="section-container">
-            <p class="title">网络课程概览</p>
+            <p class="title">网络课程</p>
             <img class="divide-img" src="img/divide-line.png">
             <div class="oc-part1-txt">
-                此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍此处是100-200字文字介绍。
+                雅思名师齐聚课堂/缩小每月预测范围/真正有效答题技巧
             </div>
         </div>
     </div>
