--- a/teaching-system.html
+++ b/teaching-system.html
@@ -38,11 +38,11 @@
         <div class="section-container">
             <div class="system-banner-txt">
                 <div class="system-banner-top">
-                    成千上万的雅思学员选择壹教壹学的课程，<br/>
-                    帮你有效提升英语语言能力，提高雅思分数！
+                    听说读写全面覆盖的体系教学，<br/>
+                    帮你有效提升英语能力，提高雅思分数！
                 </div>
                 <div class="system-banner-bot">
-                    无论你要什么雅思分数，处于何种英语水平，壹教壹学有信心帮你达成目标。来自全国的拥有多名超过10年教学经验的雅思教研团队，按照雅思官方评分标准，听说读写全面覆盖的教学内容，针对中国学生雅思英语学习的错误方法，提出正确的学习方法，最终提高英语能力和雅思分数。
+                    按照雅思官方评分标准，针对中国学生雅思英语学习的错误方法，提出正确的学习方法。
                 </div>
             </div>
         </div>
